Fixed layout issues with Joomla Registration Form
- first pass on updates to buttons styles
- first pas on updates to text
- language/text coming next

--- a/site/assets/css/wxl.css
+++ b/site/assets/css/wxl.css
@@ -728,7 +728,9 @@ input[type="search"]::-webkit-search-cancel-button{-webkit-appearance:none}
 }
 
 .wxl-login-btn.white {
- color: #666 !important;
+	color: #666 !important;
+	background-color: #f0f0f0;
+	border: 1px solid #666;
 }
 
 #wxl-login-btn-guest {
@@ -759,4 +761,15 @@ input[type="search"]::-webkit-search-cancel-button{-webkit-appearance:none}
 .x-form-inner.wxl-html,
 .x-form-inner {
 	max-width: 100%;
+}
+
+/* registration */
+
+#wxl-register-field-emailCheckNotice {
+	font-size: .75em;
+	padding:   .83125em;
+}
+
+.x-form-fieldset {
+	margin-bottom: 0;
 }
